--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-admin-template",
+  "name": "anlong-motor-parts-factory-warehouse-management-system",
   "version": "4.2.1",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
+  "description": "Anlong motor parts factory warehouse management system",
   "author": "Pan <panfree23@gmail.com>",
   "license": "MIT",
   "scripts": {
